fix(css): render properly on iOS
There were several design glitches in Safari on iOS like horizontal scrollbar, too big padding on the body, and content alignment

fixes #15

--- a/themes/conferences/static/css/output.css
+++ b/themes/conferences/static/css/output.css
@@ -751,8 +751,8 @@ video {
   background-color: rgb(3 105 161 / var(--tw-bg-opacity));
 }
 
-.p-10 {
-  padding: 2.5rem;
+.p-6 {
+  padding: 1.5rem;
 }
 
 .p-4 {
@@ -1024,11 +1024,6 @@ video {
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
 }
 
 @media (min-width: 1024px) {
@@ -1036,8 +1031,16 @@ video {
     visibility: visible;
   }
 
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:p-10 {
+    padding: 2.5rem;
   }
 
   .lg\:text-7xl {
